--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -60,22 +60,32 @@
             <br>
           <% end %>
 
-           <h3>Productos</h3>
-          <% @order.has_products.each do |hasProduct| %>
+          <% if @order.has_products.empty? %>
+            <p>No ha agregado ningún producto</p>
+          <% else %>
+            <% @order.has_products.each do |hasProduct| %>
             <%= hasProduct.specs_f %>
             <%= hasProduct.specs_b %>
             <%= hasProduct.quantity %>
             <%= hasProduct.color %>
             <%= hasProduct.design %>
             <br>
+            <td><%= link_to 'Edit', edit_has_product_path(hasProduct) %></td>
+            <td><%= link_to 'Destroy', hasProduct, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>  
           <% end %>
 
           <h3>Detalles</h3>
-          <% @order.order_details.each do |order_detail| %>
-            <%= order_detail.firstname %>
-            <%= order_detail.lastname %>
-            <%= order_detail.number %>
-            <%= order_detail.size %><br>
+          <% if @order.order_details.empty? %>
+            <p>No ha agregado ningún detalle</p>
+          <% else %>
+            <% @order.order_details.each do |order_detail| %>
+              <%= order_detail.firstname %>
+              <%= order_detail.lastname %>
+              <%= order_detail.number %>
+              <%= order_detail.size %><br>
+              <td><%= link_to 'Destroy', order_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
           <% end %>
 
           <!-- Button trigger modal -->
