--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -12,37 +12,29 @@
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <p id="notice"><%= notice %></p>
-      <div class="card">
-        <div class="card-content"> 
-          <div class="row">
-            <div class="card-content">
-              <h3>Auspiciantes registrados</h3><br>
-              <div class="table-responsive">
-                <table class="table table-striped table-bordered table-hover">
-                  <thead>
-                    <tr>
-                      <th>Nombre</th>
-                      <th>Imagen</th>
-                      <th>Editar</th>
-                      <th>Eliminar</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% @sponsors.each do |sponsor| %>
-                      <tr>
-                        <td><%= sponsor.name %></td>
-                        <td><%= image_tag sponsor.image.url(:thumb) %></td>
-                        <td><%= link_to '', edit_sponsor_path(sponsor), class: 'fas fa-edit' %></td>
-                        <td><%= link_to '', sponsor, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
-                      </tr>
-                    <% end %>
-                  </tbody>
-                </table>
-                <%= link_to 'Nuevo auspiciante', new_sponsor_path %>
-              </div>
-            </div>
-          </div>
+      <div class="row">
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered table-hover">
+            <thead>
+              <tr>
+                <th>Nombre</th>
+                <th>Imagen</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @sponsors.each do |sponsor| %>
+              <tr>
+                <td><%= sponsor.name %></td>
+                <td><%= image_tag sponsor.image.url(:thumb) %></td>
+                <td><%= link_to '', edit_sponsor_path(sponsor), class: 'fas fa-edit' %></td>
+                <td><%= link_to '', sponsor, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <%= link_to 'Nuevo', new_sponsor_path, class: 'btn btn-primary' %>
         </div>
       </div>
     </div>
