--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -12,50 +12,40 @@
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <p id="notice"><%= notice %></p>
-      <div class="card">
-        <div class="card-content"> 
-          <div class="row">
-            <div class="card-content">
-              <h3>Clientes registrados</h3><br>
-              <div class="table-responsive">
-                <table class="table table-striped table-bordered table-hover">
-                  <thead>
-                    <tr>
-                      <th>Nombre</th>
-                      <th>Apellido</th>
-                      <th>Doc/ruc</th>
-                      <th>Telefóno</th>
-                      <th>Nacimiento</th>
-                      <th>Correo</th>
-                      <th>Ciudad</th>
-                      <th>País</th>
-                      <th>Editar</th>
-                      <th>Eliminar</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% @clients.each do |client| %>
-                    <tr>
-                      <td><%= client.firstname %></td>
-                      <td><%= client.lastname %></td>
-                      <td><%= client.doc_ruc %></td>
-                      <td><%= client.telephone %></td>
-                      <td><%= client.date_nac %></td>
-                      <td><%= client.mail %></td>
-                      <td><%= client.city %></td>
-                      <td><%= client.country %></td>
-                      <td><%= link_to '', edit_client_path(client), class: 'fas fa-edit' %></td>
-                      <td><%= link_to '' , client, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-                    </tr>
-                    <% end %>
-                  </tbody>
-                </table>
-                <%= link_to 'Nuevo cliente', new_client_path %>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellido</th>
+              <th>Doc/ruc</th>
+              <th>Telefóno</th>
+              <th>Nacimiento</th>
+              <th>Correo</th>
+              <th>Ciudad</th>
+              <th>País</th>
+              <th>Editar</th>
+              <th>Eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @clients.each do |client| %>
+            <tr>
+              <td><%= client.firstname %></td>
+              <td><%= client.lastname %></td>
+              <td><%= client.doc_ruc %></td>
+              <td><%= client.telephone %></td>
+              <td><%= client.date_nac %></td>
+              <td><%= client.mail %></td>
+              <td><%= client.city %></td>
+              <td><%= client.country %></td>
+              <td><%= link_to '', edit_client_path(client), class: 'fas fa-edit' %></td>
+              <td><%= link_to '' , client, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= link_to 'Nuevo', new_client_path, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
