--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -12,79 +12,69 @@
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <p id="notice"><%= notice %></p>
-      <div class="card">
-        <div class="card-content">
-          <div class="row">
-            <div class="card-content">
-              <h3>Pedidos</h3><br>
-              <div class="table-responsive">
-                <table class="table table-striped table-bordered table-hover">
-                  <thead>
-                  <tr>
-                    <th>Cliente</th>
-                    <th>Fecha del pedido</th>
-                    <th>Fecha de Entrega</th>
-                    <th>Curso o Club</th>
-                    <th>Logo</th>
-                    <th>Notas</th>
-                    <th>Cantidad</th>
-                    <th>Auspiciantes</th>
-                    <th>Estado</th>
-                    <th>Ver</th>
-                    <th>Editar</th>
-                    <th>Eliminar</th>
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>Cliente</th>
+              <th>Fecha del pedido</th>
+              <th>Fecha de Entrega</th>
+              <th>Curso o Club</th>
+              <th>Logo</th>
+              <th>Notas</th>
+              <th>Cantidad</th>
+              <th>Auspiciantes</th>
+              <th>Estado</th>
+              <th>Ver</th>
+              <th>Editar</th>
+              <th>Eliminar</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.client.firstname %></td>
+              <td><%= order.created_at %></td>
+              <td><%= order.deliver_date %></td>
+              <td><%= order.course_club %></td>
+              <td><%= order.logo %></td>
+              <td><%= order.notes %></td>
+              <td><%= order.quantity %></td>
+              <td>
+                <% order.sponsors.each do |sponsor| %>
+                <%= sponsor.name %>
+                <% end %>
+              </td>
+              <% if order.state == 'En espera' %>
+              <% if current_user.is_admin? or current_user.is_secretary? %>
+              <td><p class='alert alert-danger'><%= order.state %></td>
+                <% elsif current_user.is_team? %>
+                <td class="alert alert-danger"><%= link_to order.state, orders_state_path(order) %></td>
+                <%end%>
+                <% elsif order.state == 'En proceso' %>
+                <% isf current_user.is_admin? or current_user.is_secretary? %>
+                <td><p class='alert alert-warning'><%= order.state %></td>
+                  <% elsif current_user.is_team? %>
+                  <td class="alert alert-warning"><%= link_to order.state, orders_state_path(order) %></td>
+                  <%end%>
+                  <% else %>
+                  <% if current_user.is_admin? or current_user.is_secretary? %>
+                  <td><p class='alert alert-success'><%= order.state %></td>
+                    <% elsif current_user.is_team? %>
+                    <td class="alert alert-success"><%= link_to order.state, orders_state_path(order) %></td>
+                    <%end%>
+                    <% end %>
+
+                    <td><%= link_to '', order, class: 'fas fa-eye' %></td>
+                    <td><%= link_to '', edit_order_path(order), class: 'fas fa-edit' %></td>
+                    <td><%= link_to '', order, method: :delete, data: {confirm: 'Estás seguro?'}, class: "fas fa-trash" %></td>
                   </tr>
-                  </thead>
-
-                  <tbody>
-                  <% @orders.each do |order| %>
-                    <tr>
-                      <td><%= order.client.firstname %></td>
-                      <td><%= order.created_at %></td>
-                      <td><%= order.deliver_date %></td>
-                      <td><%= order.course_club %></td>
-                      <td><%= order.logo %></td>
-                      <td><%= order.notes %></td>
-                      <td><%= order.quantity %></td>
-                      <td>
-                        <% order.sponsors.each do |sponsor| %>
-                          <%= sponsor.name %>
-                        <% end %>
-                      </td>
-                      <% if order.state == 'En espera' %>
-                          <% if current_user.is_admin? or current_user.is_secretary? %>
-                            <td><p class='alert alert-danger'><%= order.state %></td>
-                          <% elsif current_user.is_team? %>
-                            <td class="alert alert-danger"><%= link_to order.state, orders_state_path(order) %></td>
-                          <%end%>
-                      <% elsif order.state == 'En proceso' %>
-                          <% if current_user.is_admin? or current_user.is_secretary? %>
-                            <td><p class='alert alert-warning'><%= order.state %></td>
-                          <% elsif current_user.is_team? %>
-                            <td class="alert alert-warning"><%= link_to order.state, orders_state_path(order) %></td>
-                          <%end%>
-                      <% else %>
-                        <% if current_user.is_admin? or current_user.is_secretary? %>
-                            <td><p class='alert alert-success'><%= order.state %></td>
-                        <% elsif current_user.is_team? %>
-                            <td class="alert alert-success"><%= link_to order.state, orders_state_path(order) %></td>
-                        <%end%>
-                      <% end %>
-
-                      <td><%= link_to '', order, class: 'fas fa-eye' %></td>
-                      <td><%= link_to '', edit_order_path(order), class: 'fas fa-edit' %></td>
-                      <td><%= link_to '', order, method: :delete, data: {confirm: 'Estás seguro?'}, class: "fas fa-trash" %></td>
-                    </tr>
                   <% end %>
-                  </tbody>
-                </table>
-                <%= link_to 'Nuevo pedido', new_order_path %>
-              </div>
+                </tbody>
+              </table>
+              <%= link_to 'Nuevo', new_order_path, class: 'btn btn-primary'%>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
