--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -12,47 +12,37 @@
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <p id="notice"><%= notice %></p>
-      <div class="card">
-        <div class="card-content"> 
-          <div class="row">
-            <div class="card-content">
-              <h3>Productos registrados</h3><br>
-              <div class="table-responsive">
-                <table class="table table-striped table-bordered table-hover">
-                  <thead>
-                    <tr>
-                      <th>Nombre</th>
-                      <th>Precio</th>
-                      <th>Imagen</th>
-                      <th>Descripción</th>
-                      <th>Insumos</th>
-                      <th>Editar</th>
-                      <th>Eliminar</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% @products.each do |product| %>
-                    <tr>
-                      <td><%= product.name %></td>
-                      <td><%= product.price %></td>
-                      <td><%= image_tag product.image.url(:thumb)%></td>
-                      <td><%= product.description %></td>
-                      <td><% product.supplies.each do |supply|%>
-                            <%= supply.name %>
-                          <%end%>
-                      </td>
-                      <td><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %></td>
-                      <td><%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-                    <% end %>
-                  </tbody>
-                </table>
-                <%= link_to 'Nuevo producto', new_product_path %>
-              </div>
-            </div>
-          </div>
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Precio</th>
+              <th>Imagen</th>
+              <th>Descripción</th>
+              <th>Insumos</th>
+              <th>Editar</th>
+              <th>Eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @products.each do |product| %>
+            <tr>
+              <td><%= product.name %></td>
+              <td><%= product.price %></td>
+              <td><%= image_tag product.image.url(:thumb)%></td>
+              <td><%= product.description %></td>
+              <td><% product.supplies.each do |supply|%>
+                <%= supply.name %>
+                <%end%>
+              </td>
+              <td><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %></td>
+              <td><%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+              <% end %>
+            </tbody>
+          </table>
+          <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
         </div>
       </div>
     </div>
   </div>
-</div>
