Cambios en vistas

--- a/starweb/app/views/clients/edit.html.erb
+++ b/starweb/app/views/clients/edit.html.erb
@@ -3,9 +3,8 @@
     Clientes
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li class="active">Editar</li>
+      <li><%= link_to "Clientes", clients_path %></li>
+      <li><a href="#">Editar</a></li>
   </ol> 
 </div>
 
