--- a/starweb/app/views/orders/edit.html.erb
+++ b/starweb/app/views/orders/edit.html.erb
@@ -3,9 +3,8 @@
     Pedidos
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Pedidos</a></li>
-    <li class="active">Editar</li>
+    <li><%= link_to "Pedidos", orders_path %></li>
+    <li class="#">Editar</li>
   </ol>
 </div>
 
