--- a/starweb/app/views/products/new.html.erb
+++ b/starweb/app/views/products/new.html.erb
@@ -3,9 +3,8 @@
     Productos
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Productos</a></li>
-    <li class="active">Nuevo</li>
+    <li><%= link_to "Productos", products_path %></li>
+    <li class="#">Nuevo</li>
   </ol> 
 </div>
 
