--- a/starweb/app/views/report/index.html.erb
+++ b/starweb/app/views/report/index.html.erb
@@ -4,11 +4,10 @@
   </h1>
 
   <ol class="breadcrumb">
-    <li><a href="#">Home</a></li>
+    <li><%= link_to "Home", orders_path %></li>
     <li><a href="#">Dashboard</a></li>
     <li class="active">Data</li>
-  </ol> 
-
+  </ol>
 </div>
 
 <div id="page-inner">
