--- a/starweb/app/views/sponsors/edit.html.erb
+++ b/starweb/app/views/sponsors/edit.html.erb
@@ -3,9 +3,8 @@
     Auspiciantes
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Auspiciantes</a></li>
-    <li class="active">Editar</li>
+    <li><%= link_to "Auspiciantes", sponsors_path %></li>
+    <li class="#">Editar</li>
   </ol> 
 </div>
 
