--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -3,9 +3,7 @@
     Clientes
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li class="active">Index</li>
+    <li class="#">Clientes</li>
   </ol> 
 </div>
 
