--- a/starweb/app/views/clients/new.html.erb
+++ b/starweb/app/views/clients/new.html.erb
@@ -3,9 +3,8 @@
     Clientes
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li class="active">Nuevo</li>
+    <li><%= link_to "Clientes", clients_path %></li>
+    <li class="#">Nuevo</li>
   </ol> 
 </div>
 
