--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -7,7 +7,8 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand waves-effect waves-dark" href="index.html"><i class="large material-icons">track_changes</i> <strong>StarWeb</strong></a>
+    <%= link_to(raw("<i class='fas fa-volleyball-ball '></i> StarWeb"), root_path, class: "navbar-brand waves-effect waves-dark") %>
+
 
     <div id="sideNav" href=""><i class="material-icons dp48">toc</i></div>
   </div>
@@ -24,7 +25,7 @@
     <ul class="nav" id="main-menu">
       <% if current_user.is_admin? %>
       <li>
-        <%= link_to(raw("<i class='fa fa-file-alt'></i> Reportes"), root_path, class: "waves-effect waves-dark") %>
+        <%= link_to(raw("<i class='fa fa-file-alt'></i> Reportes"), 'home/index', class: "waves-effect waves-dark") %>
       </li>
       <% end %>
 
