--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -3,9 +3,7 @@
     Insumos
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Insumos</a></li>
-    <li class="active">Index</li>
+    <li class="#">Insumos</li>
   </ol> 
 </div>
 
@@ -21,8 +19,6 @@
                 <th>Imagen</th>
                 <th>Stock</th>
                 <th>Descripción</th>
-                <th>Editar</th>
-                <th>Eliminar</th>
               </tr>
             </thead>
             <tbody>
@@ -32,8 +28,7 @@
                 <td><%= supply.image %></td>
                 <td><%= supply.stock %></td>
                 <td><%= supply.description %></td>
-                <td><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %></td>
-                <td><%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
+                <td style="width: 70px"><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
               </tr>
               <% end %>
             </tbody>
