Imagen en formulario de Insumos y pedidos

--- a/starweb/app/views/orders/_form.html.erb
+++ b/starweb/app/views/orders/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :logo %>
-    <%= form.text_field :logo %>
+    <%= form.label 'Logo' %>
+    <%= form.file_field :logo, class: 'field' %>
   </div>
 
   <div class="field">
