--- a/starweb/app/views/supplies/_form.html.erb
+++ b/starweb/app/views/supplies/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.text_field :image %>
+    <%= form.file_field :image, class: 'field' %>
   </div>
 
   <div class="field">
