--- a/starweb/app/views/orders/_form.html.erb
+++ b/starweb/app/views/orders/_form.html.erb
@@ -49,6 +49,6 @@
   </div><br>
 
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit "Agregar", class: 'btn btn-primary' %>
   </div>
 <% end %>
