Eliminado campo cantidad en pedido - Mejorado date picker

--- a/starweb/app/views/clients/_form.html.erb
+++ b/starweb/app/views/clients/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= form.label :date_nac %>
-    <%= form.date_select :date_nac %>
+    <%= form.date_field :date_nac %>
   </div><br>
 
   <div class="field">
